# cx-public

./: .gitignore
backend/contracts/: README.md  manifest.json
backend/python/: pyproject.toml
backend/python/packaging/: README.md  cx_backend.spec  requirements.lock.txt  smoke_stdio_host.py
backend/python/smoke/: test_las_sample_file_smoke.py
backend/python/src/cx_backend/: __init__.py  __main__.py
backend/python/src/cx_backend/features/: __init__.py
backend/python/src/cx_backend/features/dlis/: __init__.py  models.py  parser.py  tasks.py
backend/python/src/cx_backend/features/las/: __init__.py  models.py  normalize.py  parser.py  tasks.py
backend/python/src/cx_backend/host/: __init__.py  file_transport.py  settings.py  stdio_host.py  task_registry.py
backend/python/src/cx_backend/models/: __init__.py  contracts.py  errors.py  sessions.py
backend/python/tests/: test_contract_envelope_and_transport.py  test_contract_manifest_sync.py  test_las_curve_values_at_depth.py  test_las_data_preview_optimization.py  test_las_enhanced_parse_response.py  test_las_export_curve_data_csv.py  test_las_get_curve_data_validation.py  test_las_index_selection_policy.py  test_las_statistics_and_correlation_validation.py  test_las_time_index_normalization.py  test_runtime_dependencies.py  test_stdio_host_json_output.py  test_task_registry_and_host.py
scripts/: check-i18n.mjs  perf-audit.mjs  replay-topology-lineage.mjs  test-directional-hit-target-highlight.mjs  test-topology-golden.mjs
src/: App.vue  main.js
src/annulus/: meaningModel.js
src/app/: alerts.js  hot.js  (+17 more)
(+521 files in other folders)
